(executable
 (name server)
 (public_name platform_server)
 (libraries common 
            dream 
            tyxml 
            pages 
            )
 (preprocess (pps lwt_ppx))
 (flags
  (:standard)
  (:include %{workspace_root}/static-link-flags.sexp)
  )

 (package platform_thingy)
 )


;(rule
; (targets server.ml)
; (deps server.eml.ml)
; (action (run dream_eml %{deps} --workspace %{workspace_root})))


; (libraries

