(executable
 (name server)
 (public_name platform_server)
 (libraries common 
            dream 
            tyxml 
            protocol_detection
            ppx_deriving_encoding
            ppx_deriving

            tezos-shell-services
            tezos-base
            cohttp
            cohttp-lwt-unix
            lwt
            )
 (preprocess (pps lwt_ppx ppx_deriving_encoding ppx_deriving.show))

 (flags
  (:standard)
  (:include %{workspace_root}/static-link-flags.sexp)
  )

 (package platform_thingy)
 )


;(rule
; (targets server.ml)
; (deps server.eml.ml)
; (action (run dream_eml %{deps} --workspace %{workspace_root})))


; (libraries

