(executable
 (name main_baker_proto_custom_poa)
 (public_name octez-baker-custom-poa)
 (package octez-baker-custom-poa)
 (instrumentation (backend bisect_ppx))
 (libraries
  tezos-base
  tezos-clic
  tezos-protocol-custom-poa
  tezos-client-custom-poa
  tezos_baker_lib_custom_poa
  tezos-stdlib-unix
  tezos-client-commands
  tezos-client-base-unix)
 (link_flags
  (:standard)
  (:include %{workspace_root}/static-link-flags.sexp))
 (flags
  (:standard)
  -open Tezos_base.TzPervasives
  -open Tezos_base.TzPervasives.Error_monad.Legacy_monad_globals
  -open Tezos_protocol_custom_poa
  -open Tezos_client_custom_poa
  -open Tezos_client_commands
  -open Tezos_baker_lib_custom_poa
  -open Tezos_stdlib_unix
  -open Tezos_client_base_unix))

